Remove usages of Commons IO (#142)